Change height of button for look

--- a/templates/rt_gantry/css/style1.css
+++ b/templates/rt_gantry/css/style1.css
@@ -69,8 +69,9 @@ position:relative;
 
 /* Header - Search */
 .search {float:right;margin-top:0px;}
-.search .button {position:absolute;
-height: 19px;
+.search .button {
+position:absolute;
+height: 22px;
 }
 #mod-search-searchword{margin:0px}
 
