Take the extra spacing away from the blank modules

--- a/templates/rt_gantry/css/style1.css
+++ b/templates/rt_gantry/css/style1.css
@@ -1011,3 +1011,11 @@ div#sbox-window {
 	margin: 0 auto;
 	padding: 0px;
 }
+
+div#div-gpt-ad-1408504440613-5 {
+	margin-bottom: -45px;
+}
+
+div#_CI_widget_31577 {
+	margin-bottom: -45px;
+}
