--- a/templates/rt_gantry/css/style1.css
+++ b/templates/rt_gantry/css/style1.css
@@ -1011,3 +1011,12 @@ div#sbox-window {
 	margin: 0 auto;
 	padding: 0px;
 }
+.springheight {
+	height:183px;
+}
+.resp300x250 {
+	margin: 0 auto;
+}
+.ci2180 {
+	max-height: 2180px;
+}
