Fix merge conflicts

--- a/templates/rt_gantry/css/style1.css
+++ b/templates/rt_gantry/css/style1.css
@@ -1020,3 +1020,10 @@ div#sbox-window {
 .ci2180 {
 	max-height: 2180px;
 }
+div#div-gpt-ad-1408504440613-5 {
+	margin-bottom: -45px;
+}
+
+div#_CI_widget_31577 {
+	margin-bottom: -45px;
+}
