--- a/templates/t3_blank/css/template.css
+++ b/templates/t3_blank/css/template.css
@@ -3330,7 +3330,7 @@ div.catItemFooter span.catItemDateCreated {
 }
 
 h3.catItemTitle {
-	font-family: 'Roboto', sans-serif !important;
+	font-family: Verdana,Verdana,Geneva,sans-serif !important;
     font-size: 16px !important;
     font-weight: bold !important;
     text-transform: uppercase;
